# etl-starter-kit

./: README.md  pyproject.toml
aribyte/: .gitignore  README.md
datax/: .gitignore  README.md
datax/examples/: mysql2mysql.json  mysql2oracle.json  mysql2pg.json  mysql2pg_bm.json  mysql2starrocks.json  oracle2pg.json  oracle2stream.json  pg2mysql.json  stream2mysql.json  stream2stream.json
dbt/: .gitignore  .user.yml  README.md  profiles.yml
docker/: .env  compose-starrocks.yml  compose.yml  mysql.sql  pg.sql
docker/mysql/docker-entrypoint-initdb.d/: demo.sql
docker/postgres/docker-entrypoint-initdb.d/: customer.sql  demo.sql
docker/starrocks/: demo.sql  fe.conf
kettle/: README.md
kettle/examples/: hello.ktr  job.kjb  list.csv  mysql2pg.ktr  mysql2pg_bm.ktr
meltano/: .gitignore  README.md  demo.md  logging.yaml  meltano-bm.yml  meltano.yml  meltano_tut  workflow.md
meltano/data/: customers.csv
seatunnel/: .gitignore  README.md  cli.sh  docker-compose.yml  run-by-docker.sh
seatunnel/config/: seatunnel.yaml
seatunnel/jobs/: doris_to_doris.conf  doris_to_mysql.conf  fake_to_doris.conf  mysql_source_and_sink.sql  mysql_source_and_sink_multiple_tables.sql  posgres_source_and_mysql_sink.confg  postgres.conf  postgres_to_mysql_multiple_tables.sql
seatunnel/plugins/: README.md
